# PlantVsZombies-Recode

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Open_ClaudeCode.ps1  PeaBulletHit.xml  PlantVsZombies.7z  PlantVsZombies.sln  PlantsVsZombies.sln  README.md  THIRD-PARTY-LICENSES.txt  launch.vs.json  vcpkg-configuration.json  vcpkg.json  打开Claude Code.bat  批量转换.ps1  每次开claude，记得观察有没有开TUN  看我.txt
.claude/: settings.local.json
.codex/: config.toml
.githooks/: pre-commit
PlantVsZombies/: AllCppInclude.h  AnimatedObject.h  AudioSystem.cpp  AudioSystem.h  Button.cpp  Button.h  ButtonManager.h  Camera2D.h  ClickableComponent.h  Coin.h  ColliderComponent.h  CollisionSystem.h  Component.cpp  Component.h  ConstEnums.h  CrashHandler.cpp  CrashHandler.h  CursorManager.cpp  CursorManager.h  Definit.h  DeltaTime.h  FileManager.cpp  FileManager.h  GameApp.cpp  GameApp.h  GameInfoSaver.cpp  GameInfoSaver.h  GameMonitor.cpp  GameMonitor.h  GameObject.cpp  GameObject.h  GameObjectManager.h  GameRandom.h  Graphics.cpp  Graphics.h  InputHandler.cpp  InputHandler.h  Logger.cpp  Logger.h  Particle.cpp  (+43 more)
PlantVsZombies/Board&Game/: AnimatedObject.h  AudioSystem.cpp  AudioSystem.h  ClickableComponent.h  Coin.h  Definit.h  GameObject.h  GameObjectManager.h  ReanimationComponent.h  Sun.h
PlantVsZombies/Game/: AdaptiveMusicPlayer.cpp  AdaptiveMusicPlayer.h  AdventureProgression.h  AlmanacScene.cpp  AlmanacScene.h  AnimatedObject.cpp  AnimatedObject.h  AudioSystem.cpp  AudioSystem.h  Board.cpp  Board.h  Card.cpp  Card.h  CardComponent.cpp  CardComponent.h  CardDisplayComponent.cpp  CardDisplayComponent.h  CardSlotManager.cpp  CardSlotManager.h  Cell.h  ChooseCardUI.cpp  ChooseCardUI.h  ClickableComponent.cpp  ClickableComponent.h  Coin.cpp  Coin.h  CoinType.h  ColliderComponent.cpp  ColliderComponent.h  CollisionSystem.h  Component.cpp  Component.h  Crater.cpp  Crater.h  CursorObjectManager.cpp  CursorObjectManager.h  DamageSource.h  DeferredEvent.h  Definit.h  EntityManager.cpp  (+39 more)
PlantVsZombies/ParticleSystem/: Particle.cpp  Particle.h  ParticleConfig.cpp  ParticleConfig.h  ParticleEffect.cpp  ParticleEffect.h  ParticleEmitter - 副本.cpp  ParticleEmitter - 副本.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem - 副本.cpp  ParticleSystem - 副本.h  ParticleSystem.cpp  ParticleSystem.h  ParticleXMLConfig.cpp  ParticleXMLConfig.h  ParticleXMLLoader.cpp  ParticleXMLLoader.h
PlantVsZombies/Reanimation/: AnimationTypes.h  Animator.cpp  Animator.h  AttachmentSystem.cpp  AttachmentSystem.h  ReanimParser.cpp  ReanimParser.h  ReanimTypes.h  Reanimation.cpp  Reanimation.h  Reanimator.cpp  Reanimator.h  SimpleXmlParser.h  TodCommon.h  TodDebug.h  XFLParser.h
PlantVsZombies/Renderer/: VmaImpl.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanTexturePool.cpp  VulkanTexturePool.h
PlantVsZombies/Shader/: batch.frag.glsl  batch.vert.glsl  batch_fragment.glsl  batch_vertex.glsl  geom_fragment.glsl  geom_vertex.glsl  pool.frag.glsl  pool.vert.glsl  quad.frag.glsl  quad.vert.glsl  reanim_inst.frag.glsl  reanim_inst.vert.glsl  sprite_fragment.glsl  sprite_vertex.glsl  triangle.frag.glsl  triangle.vert.glsl
PlantVsZombies/UI/: Button.cpp  Button.h  ButtonManager.cpp  ButtonManager.h  GameMessageBox.cpp  GameMessageBox.h  InputHandler.cpp  InputHandler.h  Slider.cpp  Slider.h  SliderManager.cpp  SliderManager.h  UIManager.h
PlantVsZombies/drmemory_logs/: resfile.5604
autotest/scripts/: almanac_click.json  demo_peashooter.json  gameselect_smoke.json  mainmenu_options_shot.json  pause_menu_shot.json  repro_blend_hand.json  repro_paper_cherry.json  repro_paper_death.json  repro_shooter_save_resume.json  smoke_adventure_progression.json  smoke_animator_recursive_instancing.json  smoke_backupdancer.json  smoke_backupdancer_rising_death.json  smoke_bullet_shadow.json  smoke_charm_basic.json  smoke_charm_bite.json  smoke_charm_door_eat_zombie.json  smoke_charm_door_eating.json  smoke_charm_fastpaper_eating.json  smoke_charm_fume.json  smoke_charm_paper_eating.json  smoke_charm_polevaulter.json  smoke_crater_card_select.json  smoke_dancer_almanac.json  smoke_dancer_charm.json  smoke_dancer_death.json  smoke_dancer_summon.json  smoke_day_pool_sun_economy.json  smoke_dev_spawn_pause.json  smoke_develop.json  smoke_doomshroom.json  smoke_door_fume_death.json  smoke_elite_dancer.json  smoke_elite_dancer_lifecycle.json  smoke_elite_dancer_mutation.json  smoke_elite_dancer_summon_steps.json  smoke_elite_polevaulter.json  smoke_elite_polevaulter_wave_cap.json  smoke_elite_scaredyshroom.json  smoke_gameplay.json  (+60 more)
cmake/: ensure_runtime_asset_links.ps1  gen_manifest.cmake  gen_third_party_licenses.cmake
cmake/vcpkg-ports/libopenmpt/: CMakeLists.txt  portfile.cmake  vcpkg.json
docs/: TODO-warnings-cleanup.md  arch-parallel-ssbo-fill.md
docs/agent-guide/: PROJECT_GUIDE.md
docs/agent-memory/: MEMORY.md  README.md  SOURCE_SHA256SUMS.txt  feedback_build_permission_msbuild.md  feedback_collaboration_style.md  feedback_dual_queue_order_preservation.md  feedback_frame_event_numbering.md  feedback_vcpkg_cache_deletion.md  project_pvz_adaptive_mo3_music.md  project_pvz_adventure_progression.md  project_pvz_animator_clip_speed.md  project_pvz_animator_playstate_save_fix.md  project_pvz_autotest_assert_state_todo.md  project_pvz_autotest_suite.md  project_pvz_blend_transform_hand_flip_fix.md  project_pvz_bullet_shadow.md  project_pvz_charmed_zombie_collision_hook.md  project_pvz_charmed_zombie_feature.md  project_pvz_clickable_optimization.md  project_pvz_cmake_migration.md  project_pvz_collision_seeker_target_fix.md  project_pvz_dalao_geometry_compute_suggestion.md  project_pvz_dancer_zombie.md  project_pvz_developer_mode.md  project_pvz_doomshroom_crater.md  project_pvz_doorzombie_arm_bugs.md  (+62 more)
scripts/: recolor_elite_dancer.ps1  recolor_elite_polevaulter.ps1  recolor_elite_scaredyshroom.ps1  recolor_pink_football.ps1  recolor_reinforced_door.ps1
tests/: SaveMigrationTests.cpp
(+210 files in other folders)
